# .github

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture-decision.yml  bug.yml  config.yml  contract-change.yml  security-design.yml  skill-submission.yml
.github/workflows/: validate.yml
scripts/: verify.py
tests/: test_governance.py
